# opendias

./: .gitignore  configure.ac  howto_build_aDebianPackage
current_code/: ChangeLog  Makefile.am  README  configure.ac
current_code/debianBuild/: control  postinst  postrm  preinst  prerm
current_code/scripts/: Makefile.am  openDIAS  openDIAS.rc
current_code/sql/: Makefile.am  openDIAS.sqlite3.dmp.v4.sql  openDIAS.sqlite3.dmp.v4.sql.template
current_code/src/: Makefile.am  doc_editor.c  import_doc.c  import_doc.c.orig  main.c  main.h  opendiasconfig.c  opendiasconfig.h  pageRender.c  read_odf.c  saneDispatcher.h  scan.c  testExec.c  utils.c  utils.h  validation.c  web_handler.c
current_code/test/: Makefile.am  README  harness.pl  setupRun.sh
current_code/test/config/: Makefile.am  defaultdatabase.sqlite3.in
current_code/test/config/sane/: Makefile.am
current_code/test/regressionTests/: 1_1_create_database.pm  1_2_failed_to_create_database.pm  1_4_various_kills_are_ignored.pm  1_5_could_not_start_http_service.pm  3_1_doclist.pm  3_2_doclist_search.pm  3_3_getScannerList.pm  3_4_getDocDetails.pm  3_5_updateDocDetails.pm  3_6_moveTag.pm  3_7_deleteDoc.pm  3_8_autoComplete.pm  3_a_scanning.pm  3_b_validation.pm  3_c_import.pm  8_1_basic_pages.pm  8_2_doc_detail.pm  8_3_doc_detail_missing.pm  8_4_scan.pm  Makefile.am  testplan
current_code/test/regressionTests/expected/: Makefile.am
current_code/test/regressionTests/expected/1_1_create_database/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/1_2_failed_to_create_database/: Makefile.am  appLog.out  testLog.out
current_code/test/regressionTests/expected/1_3_missing_config_file/: Makefile.am  appLog.out  testLog.out
current_code/test/regressionTests/expected/1_4_various_kills_are_ignored/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/1_5_could_not_start_http_service/: Makefile.am  appLog.out  testLog.out
current_code/test/regressionTests/expected/3_1_doclist/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_2_doclist_search/: Makefile.am
current_code/test/regressionTests/expected/3_3_getScannerList/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_4_getDocDetails/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_5_updateDocDetails/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_6_moveTag/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_7_deleteDoc/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_8_autoComplete/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_a_scanning/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_b_validation/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/3_c_import/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/8_1_basic_pages/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/8_2_doc_detail/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/8_3_doc_detail_missing/: Makefile.am  appLog.out
current_code/test/regressionTests/expected/8_4_scan/: Makefile.am  appLog.out
current_code/test/regressionTests/inputs/: Makefile.am
current_code/test/regressionTests/inputs/1_4_various_kills_are_ignored/: Makefile.am
current_code/test/regressionTests/inputs/1_4_various_kills_are_ignored/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/1_5_could_not_start_http_service/: Makefile.am
current_code/test/regressionTests/inputs/1_5_could_not_start_http_service/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_1_doclist/: Makefile.am
current_code/test/regressionTests/inputs/3_1_doclist/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_1_doclist/intest/: Makefile.am
current_code/test/regressionTests/inputs/3_2_doclist_search/: Makefile.am
current_code/test/regressionTests/inputs/3_2_doclist_search/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_3_getScannerList/: Makefile.am
current_code/test/regressionTests/inputs/3_3_getScannerList/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_4_getDocDetails/: Makefile.am
current_code/test/regressionTests/inputs/3_4_getDocDetails/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_5_updateDocDetails/: Makefile.am
current_code/test/regressionTests/inputs/3_5_updateDocDetails/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_6_moveTag/: Makefile.am
current_code/test/regressionTests/inputs/3_6_moveTag/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_7_deleteDoc/: Makefile.am
current_code/test/regressionTests/inputs/3_7_deleteDoc/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_8_autoComplete/: Makefile.am
current_code/test/regressionTests/inputs/3_8_autoComplete/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_a_scanning/: Makefile.am
current_code/test/regressionTests/inputs/3_a_scanning/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_b_validation/: Makefile.am
current_code/test/regressionTests/inputs/3_b_validation/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/3_c_import/: Makefile.am
current_code/test/regressionTests/inputs/3_c_import/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/8_1_basic_pages/: Makefile.am
current_code/test/regressionTests/inputs/8_1_basic_pages/homeDir/: Makefile.am
current_code/test/regressionTests/inputs/8_2_doc_detail/: Makefile.am
current_code/test/regressionTests/inputs/8_3_doc_detail_missing/: Makefile.am
current_code/test/regressionTests/inputs/8_4_scan/: Makefile.am
current_code/test/regressionTests/lib/: Makefile.am  standardTests.pm
current_code/test/suppressions/: Makefile.am
current_code/webcontent/: docDetail.html
current_code/webcontent/includes/: header.txt  openDias.acquire.js  openDias.loadDetails.js
i18n/: language.resource.de  (+1 more)
src/: main.c  (+8 more)
(+16 files in other folders)
