SUBDIRS = expected inputs lib

test_DATA = \
	1_1_create_database.pm \
	1_2_failed_to_create_database.pm \
	1_3_missing_config_file.pm \
	1_4_various_kills_are_ignored.pm \
	1_5_could_not_start_http_service.pm \
	3_1_doclist.pm \
	3_2_doclist_search.pm \
	3_3_getScannerList.pm \
	3_4_getDocDetails.pm \
	3_5_updateDocDetails.pm \
	3_6_moveTag.pm \
	3_7_deleteDoc.pm \
	3_8_autoComplete.pm \
	3_a_scanning.pm \
	3_b_validation.pm \
	3_c_import.pm \
	8_1_basic_pages.pm \
	8_2_doc_detail.pm \
	8_3_doc_detail_missing.pm \
	8_4_scan.pm \
	testplan

testdir = $(pkgdatadir)/test/regressionTests

EXTRA_DIST = \
	$(test_DATA)

