SUBDIRS = \
	1_4_various_kills_are_ignored \
	1_5_could_not_start_http_service \
	3_1_doclist \
	3_2_doclist_search \
	3_3_getScannerList \
	3_4_getDocDetails \
	3_5_updateDocDetails \
	3_6_moveTag \
	3_7_deleteDoc \
	3_8_autoComplete \
	3_a_scanning \
	3_b_validation \
	3_c_import \
	8_1_basic_pages \
	8_2_doc_detail \
	8_3_doc_detail_missing \
	8_4_scan

test_DATA = 

testdir = $(pkgdatadir)/test/regressionTests/inputs

EXTRA_DIST = \
	$(test_DATA)
